Fixed image too large

--- a/src/assets/scss/extra.scss
+++ b/src/assets/scss/extra.scss
@@ -3,3 +3,7 @@ section#good-to-know {
     list-style-type: none;
   }
 }
+
+#profile_picture {
+  border: 10px solid white;
+}
